@@ -211,10 +211,7 @@ $(BIN):	context depend $(LINKLIBS)
 	$(MAKE) -C $(ARCH_SRC) TOPDIR=$(TOPDIR) LINKLIBS="$(LINKLIBS)" $(BIN)
 
 depend:
-	echo "CLEANDIRS: $(CLEANDIRS)"
-	echo "MAKEDIRS:  $(MAKEDIRS)"
-	for dir in $(MAKEDIRS) ; do \
-		echo "-- DEPS in $$dir --" ; \
+	@for dir in $(MAKEDIRS) ; do \
 		$(MAKE) -C $$dir TOPDIR=$(TOPDIR) depend ; \
 	done
 
